DustTracer - meta code gen works