@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.TreeMap;
 
 import hu.sze.milab.dust.Dust;
 import hu.sze.milab.dust.DustConsts;
@@ -14,22 +15,59 @@ import hu.sze.milab.dust.utils.DustUtils;
 import hu.sze.milab.dust.utils.DustUtilsAttCache;
 
 @SuppressWarnings({ "rawtypes", "unchecked" })
-class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.MindAgent, DustMachineConsts.IdResolver {
+class DustMachine extends Dust.Machine
+		implements DustMachineConsts, DustConsts.MindAgent, DustMachineConsts.IdResolver {
+
+//long lastId = 100000L;
+//private synchronized String getTempId() {
+//	return String.valueOf( ++lastId );
+//}
+
+	static class KnowledgeMap extends HashMap {
+		private static final long serialVersionUID = 1L;
+
+		@Override
+		public String toString() {
+			return "{...}";
+		}
+	}
 
 	IdResolver idRes;
-	final Map memex = new HashMap();
+	private final Map rootUnit = new KnowledgeMap();
+
+	DustCreator<DustHandle> crtHandle = new DustCreator<DustHandle>() {
+		@Override
+		public DustHandle create(Object key, Object... hints) {
+			return new DustHandle((String) key);
+		}
+	};
+
+	DustCreator<Map> crtKnowledge = new DustCreator<Map>() {
+		@Override
+		public Map create(Object key, Object... hints) {
+			Map m = new KnowledgeMap();
+			m.put(MIND_ATT_KNOWLEDGE_HANDLE, key);
+			return m;
+		}
+	};
+
+	DustCreator<Map> crtUnit = new DustCreator<Map>() {
+		@Override
+		public Map create(Object key, Object... hints) {
+			Map m = new KnowledgeMap();
+			initUnit(m, (DustHandle) key, hints);
+
+			return m;
+		}
+	};
+
 	final ThreadLocal<DustMachineDialog> dialogs = new ThreadLocal<DustMachineDialog>() {
 		@Override
 		protected DustMachineDialog initialValue() {
 			return new DustMachineDialog(DustMachine.this);
 		}
 	};
-	
-//	long lastId = 100000L;
-//	private synchronized String getTempId() {
-//		return String.valueOf( ++lastId );
-//	}
-	
+
 	private final Thread shutdownHook = new Thread() {
 		@Override
 		public synchronized void run() {
@@ -42,57 +80,139 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 			}
 		}
 	};
-	
-	public void bootInit() {
-		idRes = this;
+
+	public void bootInit(Map<String, DustHandle> bh) {
+		initUnit(rootUnit, APP_UNIT);
+		Map rootHandles = DustUtils.simpleGet(rootUnit, MIND_ATT_UNIT_HANDLES);
+		Map rootContent = DustUtils.simpleGet(rootUnit, MIND_ATT_UNIT_CONTENT);
 		
+		Map<String, Map> unitHandles = new TreeMap<>();
+		
+		for ( Map.Entry<String, DustHandle> be : bh.entrySet()) {
+			String id = be.getKey();
+			
+			String[] ids = id.split(DUST_SEP_ID);
+			int idl = ids.length;
+			
+			if ( idl < 3 ) {
+				DustHandle h = be.getValue();
+				rootHandles.put(id, h);
+				
+				if ( APP_UNIT == h ) {
+					unitHandles.put(id, rootHandles);
+					continue;
+				}
+												
+				if ( idl == 2 ) {
+					Map m = DustUtils.safeGet(rootContent, h, crtKnowledge);
+					DustHandle hAuthor = bh.get(ids[0]);
+					if ( null == hAuthor ) {
+						hAuthor = lookup(rootUnit, ids[0]);
+					}
+					initUnit(m, h, hAuthor);
+					
+					unitHandles.put(id, (Map) m.get(MIND_ATT_UNIT_HANDLES));
+				}
+			}
+		}
+
+		for ( Map.Entry<String, DustHandle> be : bh.entrySet()) {
+			String id = be.getKey();
+			
+			if ( 3 == id.split(DUST_SEP_ID).length ) {
+				DustHandle h = be.getValue();
+				String unitId = DustUtils.cutPostfix(id, DUST_SEP_ID);
+				unitHandles.get(unitId).put(id, h);
+			}
+		}
+
+		idRes = this;
+
 		Dust.access(MindAccess.Set, APP_ASSEMBLY_MAIN, APP_MACHINE_MAIN, DUST_ATT_MACHINE_MAINASSEMBLY);
 		Dust.access(MindAccess.Set, APP_MODULE_MAIN, APP_MACHINE_MAIN, DUST_ATT_MACHINE_MODULES, KEY_ADD);
-		Dust.access(MindAccess.Set, memex, APP_MACHINE_MAIN, DUST_ATT_MACHINE_AUTHORS);
 	}
 
-	Map getUnit(String authorID, String unitID) {
-		Map m = DustUtils.safeGet(memex, authorID, UNIT_CREATOR);
-		m = DustUtils.safeGet(m, MIND_ATT_AUTHOR_UNITS, MAP_CREATOR);
-		m = DustUtils.safeGet(m, unitID, UNIT_CREATOR, authorID);
-		return m;
+	private void initUnit(Map m, MindHandle h, Object... hints) {
+		Map mH = new HashMap();
+		m.put(MIND_ATT_UNIT_HANDLES, mH);
+		mH.put(null, h);
+
+		Map mK = new HashMap();
+		m.put(MIND_ATT_UNIT_CONTENT, mK);
+		mK.put(h, m);
+
+		m.put(MIND_ATT_KNOWLEDGE_HANDLE, h);
+		m.put(MIND_ATT_KNOWLEDGE_PRIMARYASPECT, MIND_ASP_UNIT);
+		if (0 < hints.length) {
+			m.put(MIND_ATT_UNIT_AUTHOR, hints[0]);
+		}
+	}
+
+	DustHandle lookup(Map unit, String id) {
+		synchronized (unit) {
+			DustHandle ret = DustUtils.simpleGet(unit, MIND_ATT_UNIT_HANDLES, id);
+
+			if (null == ret) {
+				Map m = (Map) unit.get(MIND_ATT_UNIT_HANDLES);
+				ret = DustUtils.safeGet(m, id, crtHandle);
+			}
+			return ret;
+		}
+	}
+
+	Map getUnit(String unitID, MindHandle hAuthor) {
+		MindHandle hUnit = lookup(rootUnit, unitID);
+		Map m = (Map) rootUnit.get(MIND_ATT_UNIT_CONTENT);
+		Map ret = DustUtils.safeGet(m, hUnit, crtUnit, hAuthor);
+		return ret;
 	}
 
 	@Override
 	public DustHandle recall(String id) {
 		String[] ii = id.split(DUST_SEP_ID);
-		DustHandle h;
-		
-		if ( ii.length == 3 ) {
-			Map m = getUnit(ii[0], ii[1]);
-			m = DustUtils.simpleGet(m, MIND_ATT_UNIT_HANDLES);
-			
-			if ( ITEMID_NEW.equals(ii[2]) ) {
-				id = DustUtils.sbAppend(null, DUST_SEP_ID, true, ii[0], ii[1], m.size()).toString();
-			}
+		DustHandle hAuthor = lookup(rootUnit, ii[0]);
+		DustHandle ret = hAuthor;
 
-			h = DustUtils.safeGet(m, id, HANDLE_CREATOR);
-		} else {
-			Map m = getUnit(ii[0], ii[1]);
-			h = DustUtils.simpleGet(m, MIND_ATT_UNIT_HANDLES, null);
-			DustUtils.safeGet(m, ii[1], HANDLE_CREATOR);
+		if (ii.length > 1) {
+			String unitID = (ii.length == 2) ? id : DustUtils.cutPostfix(id, DUST_SEP_ID);
+			ret = lookup(rootUnit, unitID);
+
+			if (ii.length > 2) {
+				Map unit = getUnit(unitID, hAuthor);
+
+				if (ITEMID_NEW.equals(ii[2])) {
+					Map mh = DustUtils.simpleGet(unit, MIND_ATT_UNIT_HANDLES);
+					id = DustUtils.sbAppend(null, DUST_SEP_ID, true, ii[0], ii[1], mh.size()).toString();
+				}
+
+				ret = lookup(unit, id);
+			}
 		}
 
-		return h;
+		return ret;
 	}
 
 	Map getMemexKnowledge(DustHandle h, boolean createIfMissing) {
-		String[] ii = h.getId().split(DUST_SEP_ID);
-		Map m = getUnit(ii[0], ii[1]);
-		m = DustUtils.simpleGet(m, MIND_ATT_UNIT_KNOWLEDGE);
-		return DustUtils.safeGet(m, h, createIfMissing ? KNOWLEDGE_CREATOR : null);
+		String id = h.getId();
+		String[] ii = id.split(DUST_SEP_ID);
+		Map unit = null;
+
+		if (ii.length < 3) {
+			unit = rootUnit;
+		} else {
+			DustHandle hAuthor = lookup(rootUnit, ii[0]);
+			unit = getUnit(DustUtils.cutPostfix(id, DUST_SEP_ID), hAuthor);
+		}
+
+		Map m = DustUtils.simpleGet(unit, MIND_ATT_UNIT_CONTENT);
+		return DustUtils.safeGet(m, h, createIfMissing ? crtKnowledge : null);
 	}
 
 	@Override
 	protected <RetType> RetType access(MindAccess cmd, Object val, Object root, Object... path) {
 		Object ret = null;
-		
-		switch ( cmd ) {
+
+		switch (cmd) {
 		case Broadcast:
 			log((MindHandle) val, path);
 			break;
@@ -103,15 +223,15 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 			ret = dialogs.get().access(cmd, val, root, path);
 			break;
 		}
-		
+
 		return (RetType) ret;
-		
+
 	}
 
 	protected void log(MindHandle event, Object... params) {
 		StringBuilder sb = DustUtils.sbAppend(null, ", ", false, params);
 
-		if ( null != sb ) {
+		if (null != sb) {
 			System.out.println(DustUtils.sbAppend(null, "", true, DustDevUtils.getTimeStr(), " [", event, "] ", sb));
 		}
 	}
@@ -124,7 +244,7 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 	protected MindHandle agentBegin() throws Exception {
 
 		MindHandle ret = MIND_TAG_RESULT_REJECT;
-		
+
 		Collection mods = Dust.access(MindAccess.Peek, Collections.EMPTY_LIST, APP_MACHINE_MAIN, DUST_ATT_MACHINE_MODULES);
 		for (Object m : mods) {
 			Collection nls = Dust.access(MindAccess.Peek, Collections.EMPTY_LIST, m, DUST_ATT_MODULE_NATIVELOGICS);
@@ -134,19 +254,20 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 		}
 
 		ArrayList sa = Dust.access(MindAccess.Peek, null, APP_ASSEMBLY_MAIN, MIND_ATT_ASSEMBLY_STARTAGENTS);
-		if ( null == sa ) {
+		if (null == sa) {
 			ret = MIND_TAG_RESULT_PASS;
 		} else {
 			for (Object a : sa) {
 				MindAgent agent = selectAgent(a);
 
-				if ( null != agent ) {
+				if (null != agent) {
 					Dust.access(MindAccess.Set, a, null, MIND_ATT_DIALOG_ACTIVEAGENT);
 
 					try {
-						if ( DustUtilsAttCache.getAtt(MachineAtts.CanContinue, agent.agentProcess(MindAction.Begin), false) ) {
+						if (DustUtilsAttCache.getAtt(MachineAtts.CanContinue, agent.agentProcess(MindAction.Begin), false)) {
 							do {
-							} while (DustUtilsAttCache.getAtt(MachineAtts.CanContinue, agent.agentProcess(MindAction.Process), false));
+							} while (DustUtilsAttCache.getAtt(MachineAtts.CanContinue, agent.agentProcess(MindAction.Process),
+									false));
 						}
 					} finally {
 						agent.agentProcess(MindAction.End);
@@ -154,7 +275,9 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 				}
 			}
 
-			ret = (null == Dust.access(MindAccess.Peek, null, APP_ASSEMBLY_MAIN, DUST_ATT_MACHINE_ACTIVE_SERVERS)) ? MIND_TAG_RESULT_ACCEPT : MIND_TAG_RESULT_READACCEPT;
+			ret = (null == Dust.access(MindAccess.Peek, null, APP_ASSEMBLY_MAIN, DUST_ATT_MACHINE_ACTIVE_SERVERS))
+					? MIND_TAG_RESULT_ACCEPT
+					: MIND_TAG_RESULT_READACCEPT;
 		}
 
 		return ret;
@@ -163,26 +286,27 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 	public MindAgent selectAgent(Object a) throws Exception {
 		MindAgent agent = Dust.access(MindAccess.Peek, null, a, DUST_ATT_NATIVELOGIC_INSTANCE);
 
-		if ( null == agent ) {
+		if (null == agent) {
 			Object l = Dust.access(MindAccess.Peek, null, a, MIND_ATT_AGENT_LOGIC);
 			Object n = null;
-			Collection allNatLog = Dust.access(MindAccess.Peek, Collections.EMPTY_SET, APP_MACHINE_MAIN, DUST_ATT_MACHINE_ALL_IMPLEMENTATIONS);
+			Collection allNatLog = Dust.access(MindAccess.Peek, Collections.EMPTY_SET, APP_MACHINE_MAIN,
+					DUST_ATT_MACHINE_ALL_IMPLEMENTATIONS);
 			for (Object nl : allNatLog) {
-				if ( l == Dust.access(MindAccess.Peek, null, nl, DUST_ATT_NATIVELOGIC_LOGIC) ) {
+				if (l == Dust.access(MindAccess.Peek, null, nl, DUST_ATT_NATIVELOGIC_LOGIC)) {
 					n = nl;
 					break;
 				}
 			}
 
-			if ( null != n ) {
+			if (null != n) {
 				agent = Dust.access(MindAccess.Peek, null, n, DUST_ATT_NATIVELOGIC_INSTANCE);
 				Dust.access(MindAccess.Set, a, null, MIND_ATT_DIALOG_ACTIVEAGENT);
 
-				if ( null == agent ) {
+				if (null == agent) {
 					String ac = Dust.access(MindAccess.Peek, null, n, DUST_ATT_NATIVELOGIC_IMPLEMENTATION);
-					agent = (MindAgent) Class.forName(ac).newInstance();
+					agent = (MindAgent) Class.forName(ac).getDeclaredConstructor().newInstance();
 					boolean srv = Dust.access(MindAccess.Peek, false, n, MIND_ATT_KNOWLEDGE_TAGS, DUST_TAG_NATIVELOGIC_SERVER);
-					if ( srv ) {
+					if (srv) {
 						agent.agentProcess(MindAction.Init);
 						Dust.access(MindAccess.Insert, agent, APP_ASSEMBLY_MAIN, DUST_ATT_MACHINE_ACTIVE_SERVERS, 0);
 					}
@@ -200,7 +324,7 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 
 	@Override
 	public MindHandle agentProcess(MindAction action) throws Exception {
-		switch ( action) {
+		switch (action) {
 		case Begin:
 			return agentBegin();
 		case End:
@@ -212,7 +336,7 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 		case Release:
 			return agentRelease();
 		}
-		
+
 		return null;
 	}
 
@@ -229,8 +353,9 @@ class DustMachine extends Dust.Machine implements DustMachineConsts, DustConsts.
 	protected MindHandle agentRelease() throws Exception {
 		MindHandle ret = MIND_TAG_RESULT_PASS;
 
-		Collection<MindAgent> servers = Dust.access(MindAccess.Peek, null, APP_ASSEMBLY_MAIN, DUST_ATT_MACHINE_ACTIVE_SERVERS);
-		if ( null == servers ) {
+		Collection<MindAgent> servers = Dust.access(MindAccess.Peek, null, APP_ASSEMBLY_MAIN,
+				DUST_ATT_MACHINE_ACTIVE_SERVERS);
+		if (null == servers) {
 			ret = MIND_TAG_RESULT_PASS;
 		} else {
 			ret = MIND_TAG_RESULT_ACCEPT;
